[package]
name = "rizzle"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swlkr/rizzle"
repository = "https://github.com/swlkr/rizzle"
keywords = ["drizzle", "rizzle", "orm", "database", "sqlite"]


[workspace]
members = [
  "macros"
]

[dependencies]
macros = { path = "macros", version = "0.1.0" }
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.29.1", features = ["rt", "tokio-macros", "full"] }
