[package]
name = "rizzle"
version = "0.1.4"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swlkr/rizzle"
repository = "https://github.com/swlkr/rizzle"
keywords = ["drizzle", "rizzle", "orm", "database", "sqlite"]
description = "A rust query builder and schema generator. Don't call it an ORM"

[workspace]
members = [
  "rizzle_macros"
]

[dependencies]
rizzle_macros = { path = "rizzle_macros", version = "0.1.2" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.47"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
